--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,20 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: FastAPI",
+            "name": "Debug api",
             "type": "debugpy",
             "request": "launch",
-            "module": "uvicorn",
+            "console": "integratedTerminal",
+            "stopOnEntry": false,
+            "justMyCode": true,
+            "python": "${command:python.interpreterPath}",
+            "cwd": "${workspaceFolder}",
+            "module": "fastapi",
             "args": [
-                "main:app",
-                "--reload"
-            ],
-            "jinja": true
+                "dev",
+                "src/main.py"
+            ]
         }
     ]
 }
