--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,4 @@
 [tool.poetry]
-package-mode = false
 name = "src"
 version = "0.1.0"
 description = ""
@@ -21,4 +20,5 @@ ruff = "^0.5.7"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-
+[tool.poetry.scripts]
+dev = "src.main:dev"
