--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
       // Use -bullseye variants on local on arm64/Apple Silicon.
       "VARIANT": "3.12-bullseye",
       // Options
-      "POETRY_VERSION": "1.8.3"
+      "PDM_VERSION": "2.17.3"
     }
   },
   "features": {
@@ -22,7 +22,7 @@
   "forwardPorts": [8000],
 
   // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "poetry install",
+  "postCreateCommand": "pdm install",
 
   // Configure tool-specific properties.
   "customizations": {
