--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,26 @@
-[tool.poetry]
+[project]
 name = "src"
-version = "0.1.0"
-description = ""
-authors = ["Steve Higgs <stevejhiggs@gmail.com>"]
-readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.12"
-fastapi = {extras = ["standard"], version = "^0.112.0"}
-types-redis = "^4.6.0.20240806"
-redis = "^5.0.8"
-httpx = "^0.27.0"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.3.2"
-ruff = "^0.5.7"
+version = "1.0.0"
+requires-python = ">= 3.12"
+dependencies = [
+    "redis>=5.0.8",
+    "types-redis>=4.6.0.20240806",
+    "httpx>=0.27.0",
+    "fastapi[standard]>=0.112.0",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
 
-[tool.poetry.scripts]
-dev = "src.main:dev"
-start = "src.main:start"
+[tool.pdm.dev-dependencies]
+dev = [
+    "pytest>=8.3.2",
+    "ruff>=0.5.7",
+]
+
+[tool.pdm.scripts]
+dev = "fastapi dev src/main.py"
+start = "python -m src.main"
+test = "pytest"
+lint = "ruff check"
